Fixed nav z-index

--- a/src/scss/03-proteins/nav.scss
+++ b/src/scss/03-proteins/nav.scss
@@ -4,9 +4,9 @@ nav {
   top:0;
   left:0;
   right:0;
+  z-index: 1;
   width: 100%;
   border-bottom: 0.1em solid #e9e9e9;
-
 }
 
 #showMenu {
